Fix some more spacing

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -86,7 +86,7 @@ button {
   background: none;
   @include futura-ff;
   color: #fff;
-  margin: 0 auto;
+  margin: 20px auto 0;
   border: 5px solid #fff;
   font-size: 20px;
   display: block;
